--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.apk
 *.ap_
 
-# Files for the ART/Dalvik VM
+# Files for the Dalvik VM
 *.dex
 
 # Java class files
@@ -11,11 +11,15 @@
 # Generated files
 bin/
 gen/
-out/
 
 # Gradle files
 .gradle/
 build/
+*/build/
+
+# Android Studio
+*.iml
+.idea
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -26,15 +30,9 @@ proguard/
 # Log Files
 *.log
 
-# Android Studio Navigation editor temp files
-.navigation/
-
-# Android Studio captures folder
-captures/
-
-# Intellij
-*.iml
-.idea/workspace.xml
-
-# Keystore files
-*.jks
+# OSX files
+.DS_Store
+  
+# Windows files
+Thumbs.db
+*.bak
