V 1.0.0 Cambio en la estructura de kripton y extensiones de retrofit, se incluye nueva funcionalidad en fragments, activities, adapters, viewholders. Se implementa una estructura más limpia sobre la librería utilizando Clean Architecture Creación de ejemplo básico de implementación de retrofit

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,14 @@
 apply plugin: 'com.android.application'
 
-def STRING   = "String";
-def HOST_APP = "HOST_APP";
+def STRING = "String";
 
-def ID_USER = "ID_USER";
-def KEY_GOOGLE = "KEY_GOOGLE";
+def APP_HOST = "APP_HOST";
+def APP_FOLDER = "APP_FOLDER";
+def APP_REST_URI = "APP_REST_URI";
+def PATH_CHANNEL = "PATH_CHANNEL";
+
+def API_KEY = "API_KEY";
+def CHANNEL_ID = "CHANNEL_ID";
 
 android {
     compileSdkVersion 23
@@ -17,9 +21,13 @@ android {
         versionCode 1
         versionName "1.0"
 
-        buildConfigField STRING, HOST_APP, '"https://www.googleapis.com/youtube/v3/"'
-        buildConfigField STRING, ID_USER, '"UCVHFbqXqoYvEWM1Ddxl0QDg"'
-        buildConfigField STRING, KEY_GOOGLE, '"AIzaSyBPlVYsLeKqj9u7wjIQFzamljTaFKPVFSE"'
+        buildConfigField STRING, APP_HOST, '"https://www.googleapis.com/"'
+        buildConfigField STRING, APP_FOLDER, '"youtube/"'
+        buildConfigField STRING, APP_REST_URI, APP_HOST.concat(' + ').concat(APP_FOLDER).concat(' + "v3/"')
+        buildConfigField STRING, PATH_CHANNEL, APP_REST_URI.concat(' + "search"')
+
+        buildConfigField STRING, API_KEY, '"AIzaSyADicFoj0c_WP0E3XVpxeeiG7Db29Vrt-g"' // {YOUR_API_KEY}
+        buildConfigField STRING, CHANNEL_ID, '"UCVHFbqXqoYvEWM1Ddxl0QDg"' // Android Developers
     }
     buildTypes {
         release {
@@ -32,9 +40,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
     compile project(path: ':KMvp')
     compile project(path: ':KExtensions')
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 
