--- a/kretrofitextensions/src/main/AndroidManifest.xml
+++ b/kretrofitextensions/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.kripton.mvp">
+    package="com.kripton.extensions.retrofit">
 
     <application
         android:allowBackup="true"
