--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,18 +49,20 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
 
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile testingDependencies.junit
+
+    compile supportDependencies.design
+    compile supportDependencies.appcompat
+    compile supportDependencies.cardview
+    compile supportDependencies.recyclerview
+
+    compile glide
+
+    compile butterknifeDependencies.butterknife
+    apt butterknifeDependencies.butterknifecompiler
 
     compile project(path: ':kmvp')
     compile project(path: ':kretrofitextensions')
-
-    compile 'com.jakewharton:butterknife:8.1.0'
-    apt 'com.jakewharton:butterknife-compiler:8.1.0'
 }
 
