Se ajusta estructura de proyecto para aplicación - librería

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,12 @@ dependencies {
     compile butterknifeDependencies.butterknife
     apt butterknifeDependencies.butterknifecompiler
 
+
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+
     compile project(path: ':kmvp')
-    compile project(path: ':kretrofitextensions')
 }
 
